<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Tip Calculator</string>
	<string name="enter_amount">Enter Amount: </string>
    <string name="tip_is">Tip is: </string>
     <string name="percentage_is">% </string>
	<string name="tenPercent">10%</string>
	<string name="fifteenPercent">15%</string>
	<string name="twentyPercent">20%</string>
	<string name="select_percentage">Select Percentage: </string>
	<string name="action_settings">Settings</string>
	<string name="enter_numeric">Numeric Value</string>
	<string name="total_amount">Total to Pay:</string>
	
</resources>
