<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.clearsky.tipcalculator.TipMainActivity$PlaceholderFragment" >
	<TextView
		android:id="@+id/tvEnterAmount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/etAmount"
		android:drawableRight="@drawable/dollar"
		android:text="@string/enter_amount"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	<EditText
		android:id="@+id/etAmount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="29dp"
		android:layout_toRightOf="@+id/tvEnterAmount"
		android:inputType="number"
		android:ems="15" 
		android:imeOptions="actionDone"/>
	<LinearLayout
		android:id="@+id/buttonContainer"
		android:layout_width="250dp"
		android:layout_height="100dp" 
		android:layout_marginLeft="20dp"
		android:layout_marginRight="350dp"
		android:layout_marginTop="50dp"
		android:orientation="horizontal" 
		android:layout_below="@+id/etAmount" >
		<Button
			android:id="@+id/bt10"
			style="?android:attr/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:background="#33B5E5"
			android:onClick="calculateTip10"
			android:text="@string/tenPercent"
			android:textColor="#FFFFFF" />
		<Button
			android:id="@+id/bt15"
			style="?android:attr/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="15dp"
			android:textColor="#FFFFFF"
			android:background="#33B5E5"
			android:onClick="calculateTip15"
			android:text="@string/fifteenPercent" />
		<Button
			android:id="@+id/bt20"
			style="?android:attr/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="calculateTip20"
			android:textColor="#FFFFFF"
			android:background="#33B5E5"
			android:text="@string/twentyPercent" />
	</LinearLayout>
	<TextView
		android:id="@+id/tvPercentage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/buttonContainer"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="20dp"
		android:text="@string/percentage_is"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	<SeekBar
		android:id="@+id/sbPercentage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvPercentage"
		android:max="100"
		android:progress="30" />
	
	<TextView
		android:id="@+id/tvTipValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="76dp"
		android:layout_toRightOf="@+id/tvTipLabel"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="#FF0000"
		android:textStyle="bold" />
	<TextView
		android:id="@+id/tvTipLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/tvTipValue"
		android:layout_toLeftOf="@+id/etAmount"
		android:text="@string/tip_is"
		android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>